--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>PAR O IMPAR</h1>
 
     <form action="" class="form">
-        <input type="text" name="number" id="" placeholder="Ingresa un numero" title="Ingresa un numero valido" required pattern="^[1-9]\d*$">
+        <input type="text" name="number" id="" placeholder="Ingresa un numero" title="Ingresa un número valido" required pattern="^[1-9]\d*$">
         <button type="submit">Calcular</button>
       <div class="response none">
 
